--- a/www/themes/nobleui/backend/layouts/partials/_head.htm
+++ b/www/themes/nobleui/backend/layouts/partials/_head.htm
@@ -58,6 +58,7 @@ use System\Models\Parameter;
     <script src="<?= url('/plugins/demo/core/formwidgets/querybuilderwidget/assets/js/query-builder.standalone.min.js') ?>"></script>
     <script src="<?= url('/modules/backend/widgets/lists/assets/js/october.list.js', 'core'); ?>"></script>
     <script src="<?= url('/plugins/demo/core/controllers/baseenginecontroller/libs/js/lodash.js') ?>"></script>
+    <script src="<?= Backend::skinAsset('assets/vendors/loading-overlay/loadingoverlay.min.js') ?>"></script>
     <?php $this->addCss('/plugins/demo/core/controllers/baseenginecontroller/assets/css/engine.css') ?>
     <script src="<?= url('/plugins/demo/core/controllers/baseenginecontroller/assets/js/engine.js') ?>"></script>
     <script src="<?= url('/plugins/demo/core/controllers/baseenginecontroller/assets/js/engine.ui.js') ?>"></script>
