--- a/www/themes/nobleui/backend/layouts/partials/_setting.htm
+++ b/www/themes/nobleui/backend/layouts/partials/_setting.htm
@@ -19,7 +19,7 @@
             </label>
         </div>
     </div>
-    <div class="theme-wrapper">
+    <!--<div class="theme-wrapper">
         <h6 class="text-muted mb-2">Light Theme:</h6>
         <a class="theme-item active" href="dashboard-one.html">
             <img src="../../assets/images/screenshots/light.jpg" alt="light theme">
@@ -28,5 +28,5 @@
         <a class="theme-item" href="/demo_2/dashboard-one.html">
             <img src="../../assets/images/screenshots/dark.jpg" alt="light theme">
         </a>
-    </div>
+    </div>-->
 </div>
