--- a/www/themes/nobleui/backend/layouts/partials/_body.htm
+++ b/www/themes/nobleui/backend/layouts/partials/_body.htm
@@ -13,7 +13,7 @@
 <div class="row">
     <div class="col-12 col-xl-12 stretch-card">
         <div class="card">
-            <div class="card-body content-body" id="content-body">
+            <div class="card-body content-body">
                 <?= Block::placeholder('body') ?>
             </div>
         </div>
