--- a/www/plugins/demo/core/formwidgets/relatedlist/partials/_relatedlist.htm
+++ b/www/plugins/demo/core/formwidgets/relatedlist/partials/_relatedlist.htm
@@ -1,29 +1,33 @@
 <div id="<?= $id ?>" class="related-list-widget"></div>
 <script>
-    const list = new EngineList('<div/>', {
-        controller: '<?=$modelRecord->controller?>'
-    });
-    var associationConfig = <?=json_encode($this->getAssociationConfig())?>;
-    let filter = null;
-    if (associationConfig.relation === 'HasMany') {
-        list.setRestQuery({
-            where: {
-                [associationConfig.key]: associationConfig.targetFieldValue,
-            }
+    (function (containerId) {
+        const $container = $('#' + containerId);
+        const list = new EngineList('<div/>', {
+            controller: '<?=$modelRecord->controller?>'
         });
-    } else if (associationConfig.relation === 'BelongsToMany') {
-        list.setRestQuery({
-            include: [{
-                attributes: ['id'],
-                key: associationConfig.key,
-                model: associationConfig.throughModel,
-                targetKey: associationConfig.targetKey || 'id',
-                'alias': 'through',
+        var associationConfig = <?=json_encode($this->getAssociationConfig())?>;
+        let filter = null;
+        if (associationConfig.relation === 'HasMany') {
+            list.setRestQuery({
                 where: {
-                    [associationConfig.otherKey]: associationConfig.targetFieldValue,
+                    [associationConfig.key]: associationConfig.targetFieldValue,
                 }
-            }],
-        });
-    }
-    list.render({container: '#<?= $id ?>'});
+            });
+        } else if (associationConfig.relation === 'BelongsToMany') {
+            list.setRestQuery({
+                include: [{
+                    attributes: ['id'],
+                    key: associationConfig.key,
+                    model: associationConfig.throughModel,
+                    targetKey: associationConfig.targetKey || 'id',
+                    'alias': 'through',
+                    where: {
+                        [associationConfig.otherKey]: associationConfig.targetFieldValue,
+                    }
+                }],
+            });
+        }
+        list.render({container: '#' + containerId});
+        $container.parents('.widget-field').find('label').eq(0).hide();
+    })('<?= $id ?>');
 </script>
