--- a/www/themes/nobleui/backend/layouts/partials/_sidebar.htm
+++ b/www/themes/nobleui/backend/layouts/partials/_sidebar.htm
@@ -8,7 +8,7 @@ $mySettings = System\Classes\SettingsManager::instance()->listItems('mysettings'
 $navbarMode = Backend\Models\BrandSetting::get('menu_mode', 'inline');
 
 $context = BackendMenu::getContext();
-$navigations = $this->getNavigations();
+$navigations = $this->getNavigations('sidebar');
 
 
 ?>
@@ -29,24 +29,6 @@ $navigations = $this->getNavigations();
 </div>
 <div class="sidebar-body">
     <ul class="nav">
-        <?php
-        $counter = 0;
-        foreach ($navigations as $navigation) {
-            $isActive = false;
-            $mainMenuId = $navigation->name . '-' . $navigation->id;
-            if ($navigation->type === 'seperator') {
-                ?>
-                <li class="nav-item nav-category"><?= $navigation->label ?></li>
-                <?php
-                $folders = $navigation->children;
-                if (!empty($folders)) {
-                    foreach ($folders as $folder) {
-                        print $this->makeLayoutPartial('partials/nav_folder', ['folder' => $folder]);
-                    }
-                }
-            } else {
-                print $this->makeLayoutPartial('partials/nav_folder', ['folder' => $navigation]);
-            }
-        } ?>
+        <?=$this->makeLayoutPartial('partials/navigation', ['navigations' => $navigations])?>
     </ul>
 </div>
